--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ body {
     min-height: 100vh;
     /* vh = viewport height */
     background-color: #fffffe;
-    background-image: url("data:image/svg+xml,%3Csvg width='42' height='44' viewBox='0 0 42 44' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='Page-1' fill='none' fill-rule='evenodd'%3E%3Cg id='brick-wall' fill='%23232946' fill-opacity='0.05'%3E%3Cpath d='M0 0h42v44H0V0zm1 1h40v20H1V1zM0 23h20v20H0V23zm22 0h20v20H22V23z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
     color: #232946;
     font-family: 'Montserrat Alternates', sans-serif;
     font-weight: 700;
@@ -108,5 +107,14 @@ button:active {
 
     .quote-text {
         font-size: 2.25rem;
+    }
+
+    .button-container {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    
+    button {
+        margin: 10px;
     }
 }
